Fixed some relative paths and hopefully stopped the container stretching issue.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 
 body{
   background-color: #FBF17A;
-  margin-bottom: 8.5rem;
+  margin-bottom: 130px;
 }
 /*make mobile fonts resize  */
 @media all and (max-width: 1200px) {
@@ -377,7 +377,6 @@ polygon {
 /*Single Event Page Styles  */
 
 .event-photo-block{
-  height: 400px;
   margin-bottom: 4em;
 }
 
